--- a/app/stylesheets/sections/_section2.scss
+++ b/app/stylesheets/sections/_section2.scss
@@ -167,7 +167,8 @@
 
     margin-bottom: 44px;
 
-    font-size: 21px;
+    font-size: 20px;
+    line-height: 1.22
   }
 
   .section2__title-wrapper {
@@ -234,7 +235,7 @@
   display: table-cell;
 
   font-family: Intro;
-  font-size: 72px;
+  font-size: 62px;
   color: #030206;
 }
 
@@ -244,8 +245,8 @@
   padding-left: 41px;
 
   font-family: Roboto;
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 15px;
+  line-height: 1.45;
   color: #030206;
   }
 }
