--- a/app/stylesheets/sections/_section4.scss
+++ b/app/stylesheets/sections/_section4.scss
@@ -1,4 +1,4 @@
-.section__title {
+.section4__title {
   font-family: Intro;
   font-size: 36px;
   color: #030206;
@@ -101,7 +101,7 @@
 }
 
 @media (max-width: 1368px) {
-  .section__title {
+  .section4__title {
     font-size: 36px;
   }
 
