--- a/app/stylesheets/sections/_section1.scss
+++ b/app/stylesheets/sections/_section1.scss
@@ -191,16 +191,25 @@ span.checkbox__yes {
 }
 
 .section1__features-item-icon-1 {
+  width: 43px;
+  height: 35px;
+
   background: url('../images/money.png') no-repeat center;
   background-size: contain;
 }
 
 .section1__features-item-icon-2 {
+  width: 37px;
+  height: 42px;
+
   background: url('../images/percent.png') no-repeat center;
   background-size: contain;
 }
 
 .section1__features-item-icon-3 {
+  width: 37px;
+  height: 47px;
+
   background: url('../images/document.png') no-repeat center;
   background-size: contain;
 }
@@ -266,11 +275,10 @@ span.checkbox__yes {
   }
 
   .checkbox {
-    top: 7px;
+    top: 5px;
 
     width: 38px;
     height: 16px;
-
   }
 
   .checkbox__circle {
@@ -279,7 +287,6 @@ span.checkbox__yes {
 
     width: 16px;
     height: 16px;
-
   }
 
   .checkbox span {
@@ -297,16 +304,23 @@ span.checkbox__yes {
   }
 
   .checkbox-wrapper__text {
-    font-size: 12px;
+    font-size: 11px;
+    line-height: 1.7;
+  }
+
+  .section1__features-item-text {
+    font-size: 13px;
+    line-height: 1.17;
   }
 
   .section1__form-btn {
-    margin-bottom: 60px;
+    margin-bottom: 50px;
   }
 
   .section1__features-item {
     font-size: 14px;
   }
+
 }
 
 @media (max-width: 1110px) {
