--- a/app/stylesheets/sections/_page-header.scss
+++ b/app/stylesheets/sections/_page-header.scss
@@ -29,6 +29,23 @@
 
 }
 
+#contain {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 36.9%;
+  height: 100%;
+  overflow: hidden;
+  filter: blur(5px);
+  z-index: 31;
+
+  canvas {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+
 .main-nav__blur {
   z-index: 30;
 
