--- a/app/stylesheets/sections/_page-header.scss
+++ b/app/stylesheets/sections/_page-header.scss
@@ -1,6 +1,7 @@
 .page-header {
   position: fixed;
-  top: 14px;
+  top: 0;
+  height: 65px;
   width: 100%;
   display: table;
   padding: 0 3.1%;
@@ -312,6 +313,12 @@
   .page-header__tel {
     margin-right: 23%;
     font-size: 16px;
+  }
+}
+
+@media (max-width: 960px) {
+  .page-header {
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
 
