Fix: second section desktop

--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -110,22 +110,23 @@ body
     .section.section2#section-2
       .container
         .section2__container-wrapper
-          .section2__title-wrapper
-            .section__title.section2__title
-              | процесс получения займа
-            .section2__text
-              | Три простых шага к получению нужной Вам денежной суммы
-            a(href="#").btn.section2__form-btn
-              | Получить займ
-          .section2__item.section2__item-3
-            .section2__item-icon.section2__item-icon-3
-            .section2__item-text-wrapper
-              .section2__item-digit
-                | 03
-              .section2__item-text
-                | Приезжайте
-                br.section2__item-text
-                | за своими деньгами
+          .section2__items-wrapper
+            .section2__title-wrapper
+              .section__title.section2__title
+                | процесс получения займа
+              .section2__text
+                | Три простых шага к получению нужной Вам денежной суммы
+              a(href="#").btn.section2__form-btn
+                | Получить займ
+            .section2__item.section2__item-3
+              .section2__item-icon.section2__item-icon-3
+              .section2__item-text-wrapper
+                .section2__item-digit
+                  | 03
+                .section2__item-text
+                  | Приезжайте
+                  br.section2__item-text
+                  | за своими деньгами
           .section2__items-wrapper
             .section2__item.section2__item-1
               .section2__item-icon.section2__item-icon-1
