--- a/app/stylesheets/sections/_section2.scss
+++ b/app/stylesheets/sections/_section2.scss
@@ -1,14 +1,16 @@
 .section2__title-wrapper {
   display: inline-block;
-  max-width: 534px;
+  max-width: 40%;
   width: 100%;
-  margin-right: 95px;
+  margin-right: 80px;
+  text-align: left;
+  margin-top: 20px;
 }
 
 .section2__title {
   max-width: 378px;
   width: 100%;
-  margin-bottom: 85px;
+  margin-bottom: 60px;
 
   font-family: Intro;
   font-size: 36px;
@@ -16,14 +18,14 @@
   color: #030206;
 
   &::after {
-    bottom: -45px;
+    bottom: -30px;
   }
 }
 
 .section2__text {
   max-width: 363px;
   width: 100%;
-  margin-bottom: 48px;
+  margin-bottom: 35px;
 
   font-family: Roboto;
   font-size: 24px;
@@ -34,6 +36,7 @@
 .section2__items-wrapper {
   display: inline-block;
   width: 100%;
+  text-align: center;
 }
 
 .section2__item {
@@ -41,8 +44,9 @@
 
   display: inline-block;
   vertical-align: top;
+  text-align: left;
 
-  max-width: 534px;
+  max-width: 40%;
   width: 100%;
   min-height: 356px;
 }
@@ -52,14 +56,14 @@
 }
 
 .section2__item-3 {
-  margin-bottom: 79px;
+  margin-bottom: 25px;
 
   background: url('../images/frame3.png') no-repeat center;
   background-size: contain;
 }
 
 .section2__item-1 {
-  margin-right: 98px;
+  margin-right: 80px;
 
   background: url('../images/frame1.png') no-repeat center;
   background-size: contain;
@@ -71,10 +75,10 @@
     right: -45px;
 
     display: block;
-    width: 85px;
+    width: 60px;
     height: 27px;
 
-    background: url('../images/green-line-2.svg') no-repeat center;
+    background: url('../images/green-line-2.svg') no-repeat center / contain;
   }
 }
 
@@ -85,15 +89,15 @@
   &::after{
     content: '';
     position: absolute;
-    top: -25px;
+    top: -15px;
     right: 109px;
     transform: rotate(-90deg);
 
     display: block;
-    width: 85px;
+    width: 60px;
     height: 27px;
 
-    background: url('../images/green-line-2.svg') no-repeat center;
+    background: url('../images/green-line-2.svg') no-repeat center / contain;
   }
 }
 
