--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -162,67 +162,68 @@ body
           | преимущества
         .section3__text
           | Почему Вам  выгодно взять займ у нас
-        .section3__big-slider
-          .big-slider__slide.big-slider__slide-1
-            .big-slider__slide-circle
-            img(src="./images/features-slide1.png").big-slider__slide-foto-1
+        .section3__content
+          .section3__big-slider
+            .big-slider__slide.big-slider__slide-1
+              .big-slider__slide-circle
+              img(src="./images/features-slide1.png").big-slider__slide-foto-1
 
-          .big-slider__slide.big-slider__slide-2
-            .big-slider__slide-circle
-            img(src="./images/features-slide2.png").big-slider__slide-foto-2
+            .big-slider__slide.big-slider__slide-2
+              .big-slider__slide-circle
+              img(src="./images/features-slide2.png").big-slider__slide-foto-2
 
-          .big-slider__slide.big-slider__slide-3
-            .big-slider__slide-circle
-            img(src="./images/features-slide3.png").big-slider__slide-foto-3
+            .big-slider__slide.big-slider__slide-3
+              .big-slider__slide-circle
+              img(src="./images/features-slide3.png").big-slider__slide-foto-3
 
-          .big-slider__slide.big-slider__slide-4
-            .big-slider__slide-circle
-            img(src="./images/features-slide4.png").big-slider__slide-foto-4
+            .big-slider__slide.big-slider__slide-4
+              .big-slider__slide-circle
+              img(src="./images/features-slide4.png").big-slider__slide-foto-4
 
-            .big-slider__slide-foto-4-img
-          .big-slider__slide.big-slider__slide-5
-            .big-slider__slide-circle
-            img(src="./images/features-slide5.png").big-slider__slide-foto-5
+              .big-slider__slide-foto-4-img
+            .big-slider__slide.big-slider__slide-5
+              .big-slider__slide-circle
+              img(src="./images/features-slide5.png").big-slider__slide-foto-5
 
-        .section3__slider-counter-wrapper
-          .section3__min-slider
-            .min-slider__slide-1
-              .min-slider__icon.min-slider__icon-1
-                img(src="./images/features-icon1.png").min-slider__slide-foto-1
-              .min-slider__text
-                | Не требуем генеральной доверенности и договор купли-продажи
-            .min-slider__slide-2
-              .min-slider__icon.min-slider__icon-2
-                img(src="./images/features-icon2.png").min-slider__slide-foto-2
-              .min-slider__text
-                | Пересчет процентов
-                br.min-slider__text
-                | за пользование займом по дням
-            .min-slider__slide-3
-              .min-slider__icon.min-slider__icon-3
-                img(src="./images/features-icon3.png").min-slider__slide-foto-3
-              .min-slider__text
-                | При заключении договора,
-                br.min-slider__text
-                | деньги наличными сразу
-            .min-slider__slide-4
-              .min-slider__icon.min-slider__icon-4
-                img(src="./images/features-icon3.png").min-slider__slide-foto-4
-              .min-slider__text
-                | Высокая лояльность к клиентам
-            .min-slider__slide-5
-              .min-slider__icon.min-slider__icon-5
-                img(src="./images/features-icon3.png").min-slider__slide-foto-5
-              .min-slider__text
-                | Работаем официально, состоим
-                br.min-slider__text
-                | на учете в ЦБ
-          .section3__counter
-            span.section3__counter-big
-              | 01
-            =" "
-            span.section3__counter-min
-          .section3-slider__arrows
+          .section3__slider-counter-wrapper
+            .section3__min-slider
+              .min-slider__slide-1
+                .min-slider__icon.min-slider__icon-1
+                  img(src="./images/features-icon1.png").min-slider__slide-foto-1
+                .min-slider__text
+                  | Не требуем генеральной доверенности и договор купли-продажи
+              .min-slider__slide-2
+                .min-slider__icon.min-slider__icon-2
+                  img(src="./images/features-icon2.png").min-slider__slide-foto-2
+                .min-slider__text
+                  | Пересчет процентов
+                  br.min-slider__text
+                  | за пользование займом по дням
+              .min-slider__slide-3
+                .min-slider__icon.min-slider__icon-3
+                  img(src="./images/features-icon3.png").min-slider__slide-foto-3
+                .min-slider__text
+                  | При заключении договора,
+                  br.min-slider__text
+                  | деньги наличными сразу
+              .min-slider__slide-4
+                .min-slider__icon.min-slider__icon-4
+                  img(src="./images/features-icon3.png").min-slider__slide-foto-4
+                .min-slider__text
+                  | Высокая лояльность к клиентам
+              .min-slider__slide-5
+                .min-slider__icon.min-slider__icon-5
+                  img(src="./images/features-icon3.png").min-slider__slide-foto-5
+                .min-slider__text
+                  | Работаем официально, состоим
+                  br.min-slider__text
+                  | на учете в ЦБ
+            .section3__counter
+              span.section3__counter-big
+                | 01
+              =" "
+              span.section3__counter-min
+            .section3-slider__arrows
     .section.section4#section-4
       .container
         .section__title.section4__title
