Fix: 7 section css

--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -339,22 +339,24 @@ body
         a(href="#").btn.section7__btn
           | Получить займ
         .section7__license-wrapper
-          a(href = "./images/license-1.png" rel = "lightbox-group").funcybox-section7
-            img(src = "images/license-1.png")
-          a(href = "./images/license-2.png" rel = "lightbox-group").funcybox-section7
-            img(src = "images/license-2.png")
-          a(href = "./images/license-3.png" rel = "lightbox-group").funcybox-section7
-            img(src = "images/license-3.png")
-          a(href = "./images/license-4.png" rel = "lightbox-group").funcybox-section7
-            img(src = "images/license-4.png")
-          a(href = "./images/license-5.png" rel = "lightbox-group").funcybox-section7
-            img(src = "images/license-5.png")
-          a(href = "./images/license-6.png" rel = "lightbox-group").funcybox-section7
-            img(src = "images/license-6.png")
-          a(href = "./images/license-7.png" rel = "lightbox-group").funcybox-section7
-            img(src = "images/license-7.png")
-          a(href = "./images/license-8-b.jpg" rel = "lightbox-group").funcybox-section7
-            img(src = "images/license-8.png")
+          .section7__inner
+            a(href = "./images/license-1.png" rel = "lightbox-group").funcybox-section7
+              img(src = "images/license-1.png")
+            a(href = "./images/license-2.png" rel = "lightbox-group").funcybox-section7
+              img(src = "images/license-2.png")
+            a(href = "./images/license-3.png" rel = "lightbox-group").funcybox-section7
+              img(src = "images/license-3.png")
+            a(href = "./images/license-4.png" rel = "lightbox-group").funcybox-section7
+              img(src = "images/license-4.png")
+          .section7__inner
+            a(href = "./images/license-5.png" rel = "lightbox-group").funcybox-section7
+              img(src = "images/license-5.png")
+            a(href = "./images/license-6.png" rel = "lightbox-group").funcybox-section7
+              img(src = "images/license-6.png")
+            a(href = "./images/license-7.png" rel = "lightbox-group").funcybox-section7
+              img(src = "images/license-7.png")
+            a(href = "./images/license-8-b.jpg" rel = "lightbox-group").funcybox-section7
+              img(src = "images/license-8.png")
     .section.section8#section-8
       .container.section8-container
         .section__title.section8__title
