--- a/app/stylesheets/sections/_section8.scss
+++ b/app/stylesheets/sections/_section8.scss
@@ -3,11 +3,7 @@
 }
 
 .section8-container {
-  position: relative;
-
-  max-width: 1346px;
-  padding: 0 14px;
-  margin: 0 auto;
+  padding-right: 20px;
 }
 
 .section8__title {
@@ -30,34 +26,35 @@
 .section8__ask-wrapper-2 {
   display: inline-block;
   vertical-align: top;
-  max-width: 576px;
+  max-width: 46%;
   width: 100%;
 }
 
 .section8__ask-wrapper-2 {
-  max-width: 654px;
   width: 100%;
+  max-width: 50%;
 }
 
 .section8__ask-wrapper-1 {
-  margin-right: 84px;
+  margin-right: 30px;
 }
 
 .section8__ask {
   display: block;
   max-width: 576px;
   width: 100%;
-  min-height: 35px;
+  min-height: 32px;
   padding-left: 20px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  margin-bottom: 17px;
+  padding-top: 6px;
+  padding-bottom: 5px;
+  padding-right: 3px;
+  margin-bottom: 10px;
 
   opacity: 0.7;
   background-color: #dcdcdc;
 
   font-family: Roboto;
-  line-height: 1.86;
+  line-height: 1.4;
   font-size: 14px;
   color: #030206;
 
@@ -76,7 +73,7 @@
 .section8__your-ask-text {
   max-width: 359px;
   width: 100%;
-  margin-bottom: 34px;
+  margin-bottom: 15px;
 
   font-family: Roboto;
   font-size: 24px;
@@ -95,11 +92,12 @@
   }
 
   .section8__ask-wrapper {
-    margin-bottom: 35px;
+    margin-bottom: 10px;
   }
 
   .section8__ask {
-    margin-bottom: 14px;
+    margin-bottom: 10px;
+    font-size: 14px;
   }
 }
 
