--- a/app/stylesheets/sections/_page-header.scss
+++ b/app/stylesheets/sections/_page-header.scss
@@ -382,9 +382,21 @@
   }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 500px) {
+  .main-nav {
+    max-width: 100%;
 
-  .main-nav__link {
-    font-size: 14px;
+    ul {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      width: 80%;
+    }
+    
+    &__link {
+      font-size: 18px;
+    }
   }
 }
