--- a/app/stylesheets/sections/_section3.scss
+++ b/app/stylesheets/sections/_section3.scss
@@ -558,3 +558,18 @@
   }
 
 }
+
+@media (max-width: 500px) {
+  .section3-title {
+    font-size: 24px !important;
+  }
+  .section3__text {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .section3__min-slider {
+    width: 100%;
+  }
+
+}
