--- a/app/stylesheets/sections/_section4.scss
+++ b/app/stylesheets/sections/_section4.scss
@@ -270,36 +270,40 @@
   }
 }
 
-@media (max-width: 427px) {
-  .section4__percent-text-1 {
-    margin-bottom: 10px;
-  }
-}
-
-@media (max-width: 423px) {
-  .section4__seven {
-    top: 210px;
+@media (max-width: 500px) {
+  .section4__title {
+    font-size: 24px;
   }
 
+  .section4__text {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .section4__percent {
+    padding: 30px 15px 30px 15px;
+    min-height: initial;
+  }
+
   .section4__percent-text-1 {
-    font-size: 22px;
+    font-size: 16px;
   }
 
   .section4__percent-text-2 {
-    font-size: 22px;
-  }
-}
-
-@media (max-width: 423px) {
-
-  .section4__percent {
-    margin-bottom: 320px;
+    font-size: 16px;
+    margin-top: 20px;
   }
 
   .section4__seven {
-    top: 210px;
+    width: 80%;
+    right: initial;
+    top: 165px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
-    width: 300px;
-    height: 235px;
+  .section__passport-item {
+    width: 49%;
+    display: inline-block;
   }
 }
