--- a/app/stylesheets/sections/_section6.scss
+++ b/app/stylesheets/sections/_section6.scss
@@ -232,3 +232,18 @@
     padding-left: 45px;
   }
 }
+
+@media (max-width: 500px) {
+  .section6__title {
+    font-size: 24px;
+  }
+
+  .section6__text {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .section6 .section__passport {
+    margin-top: 50px;
+  }
+}
