--- a/app/stylesheets/sections/_section7.scss
+++ b/app/stylesheets/sections/_section7.scss
@@ -96,7 +96,6 @@
     height: 160px;
     width: 110px;
     margin-bottom: 30px;
-    margin-right: 50px;
   }
 
   .funcybox-section7 img {
@@ -115,5 +114,30 @@
 @media (max-width: 350px) {
   .funcybox-section7:nth-child(2n) {
     margin-right: 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .section7__title {
+    font-size: 24px;
+  }
+
+  .section7__text {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .section7__inner {
+    text-align: center;
+
+    a:nth-child(2n) {
+      margin-right: 0;
+    }
+  }
+
+  .section7__btn {
+    margin-left: 50%;
+    white-space: nowrap;
+    transform: translateX(-50%);
   }
 }
