--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -28,7 +28,7 @@ body
         | Заказать звонок
       .menu-btn
         a(href="#").burger
-  .page-header.main-nav.hidden
+  .main-nav.hidden
     .main-nav__btn-close
     ul
       li
