--- a/app/stylesheets/sections/_page-header.scss
+++ b/app/stylesheets/sections/_page-header.scss
@@ -26,7 +26,7 @@
 
   box-shadow: -3.5px 3.5px 13.8px 1.2px rgba(0, 0, 0, 0.4);
 
-  transition-duratuion: 4s;
+  transition: background .7s ease;
   background: rgba(0,0,0,0.7);
 
 }
