--- a/app/stylesheets/sections/_popups.scss
+++ b/app/stylesheets/sections/_popups.scss
@@ -193,6 +193,15 @@
   width: 100%;
 
   margin-bottom: 25px;
+
+  .slick-slide {
+    position: absolute !important;
+    width: 100%;
+  }
+
+  .slick-track {
+    width: 100% !important;
+  }
 }
 
 .popup__slider-title {
