--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -4,6 +4,7 @@
 @import 'tools/_settings';
 @import 'tools/_jquery.fullPage';
 @import 'tools/_fancybox';
+@import 'tools/_animation';
 
 
 @import 'components/_btn';
