--- a/app/stylesheets/sections/_page-header.scss
+++ b/app/stylesheets/sections/_page-header.scss
@@ -24,32 +24,13 @@
   padding-top: 145px;
   padding-left: 150px;
 
+  animation-duration: 0.7s;
+
   box-shadow: -3.5px 3.5px 13.8px 1.2px rgba(0, 0, 0, 0.4);
 
   transition: background .7s ease;
   background: rgba(0,0,0,0.7);
 
-}
-
-.main-nav__blur {
-  z-index: 30;
-
-  position: fixed;
-  top: 0;
-  right: 0;
-
-  max-width: 35.9%;
-  width: 100%;
-  height: 100vh;
-  padding-top: 145px;
-  padding-left: 150px;
-
-  will-change: auto;
-
-  background: rgba(0,0,0,0.5);
-  filter: blur(5px);
-
-  transition: background-color .7s;
 }
 
 .main-nav ul {
@@ -330,11 +311,6 @@
 
   }
 
-  .main-nav__blur {
-    max-width: 43%;
-    width: 100%;
-  }
-
    .main-nav__link {
     display: block;
     margin-bottom: 20px;
@@ -394,7 +370,7 @@
       text-align: center;
       width: 80%;
     }
-    
+
     &__link {
       font-size: 18px;
     }
