--- a/app/stylesheets/sections/_section1.scss
+++ b/app/stylesheets/sections/_section1.scss
@@ -110,7 +110,7 @@
 
 .checkbox__circle {
   position: absolute;
-  left: 0;
+  right: 0;
   z-index: 20;
 
   display: inline-block;
@@ -131,6 +131,14 @@ span.checkbox__yes {
   z-index: 10;
 
   left: 5px;
+  display: block;
+}
+
+span.checkbox__no {
+  position: absolute;
+  z-index: 10;
+
+  right: 3px;
   display: none;
 }
 
@@ -283,7 +291,7 @@ span.checkbox__yes {
 
   .checkbox__circle {
     position: absolute;
-    left: 0;
+    right: 0;
 
     width: 16px;
     height: 16px;
@@ -295,7 +303,13 @@ span.checkbox__yes {
 
   span.checkbox__yes {
     top: -1px;
-    left: 4px;
+    left: 5px;
+    font-size: 11px;
+  }
+
+  span.checkbox__no {
+    top: -1px;
+    right: 4px;
     font-size: 11px;
   }
 
@@ -319,6 +333,7 @@ span.checkbox__yes {
 
   .section1__features-item {
     font-size: 14px;
+    opacity: 0;
   }
 
 }
