--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -120,7 +120,7 @@ body
                 | Три простых шага к получению нужной Вам денежной суммы
               a(href="#").btn.section2__form-btn
                 | Получить займ
-            .section2__item.section2__item-3
+            .section2__item.section2__item-3.animated
               .section2__item-icon.section2__item-icon-3
               .section2__item-text-wrapper
                 .section2__item-digit
@@ -130,7 +130,7 @@ body
                   br.section2__item-text
                   | за своими деньгами
           .section2__items-wrapper
-            .section2__item.section2__item-1
+            .section2__item.section2__item-1.animated
               .section2__item-icon.section2__item-icon-1
               .section2__item-text-wrapper
                 .section2__item-digit
@@ -139,7 +139,7 @@ body
                   | Позвоните или оставьте
                   br.section2__item-text
                   | номер телефона
-            .section2__item.section2__item-2
+            .section2__item.section2__item-2.animated
               .section2__item-icon.section2__item-icon-2
               .section2__item-text-wrapper
                 .section2__item-digit
@@ -166,26 +166,26 @@ body
           | Почему Вам  выгодно взять займ у нас
         .section3__content
           .section3__big-slider
-            .big-slider__slide.big-slider__slide-1
+            .big-slider__slide.big-slider__slide-1.animated
               .big-slider__slide-circle
-              img(src="./images/features-slide1.png").big-slider__slide-foto-1
+              img(src="./images/features-slide1.png").big-slider__slide-foto.big-slider__slide-foto-1.animated
 
-            .big-slider__slide.big-slider__slide-2
+            .big-slider__slide.big-slider__slide-2.animated
               .big-slider__slide-circle
-              img(src="./images/features-slide2.png").big-slider__slide-foto-2
+              img(src="./images/features-slide2.png").big-slider__slide-foto.big-slider__slide-foto-2.animated
 
-            .big-slider__slide.big-slider__slide-3
+            .big-slider__slide.big-slider__slide-3.animated
               .big-slider__slide-circle
-              img(src="./images/features-slide3.png").big-slider__slide-foto-3
+              img(src="./images/features-slide3.png").big-slider__slide-foto.big-slider__slide-foto-3.animated
 
-            .big-slider__slide.big-slider__slide-4
+            .big-slider__slide.big-slider__slide-4.animated
               .big-slider__slide-circle
-              img(src="./images/features-slide4.png").big-slider__slide-foto-4
+              img(src="./images/features-slide4.png").big-slider__slide-foto.big-slider__slide-foto-4.animated
 
               .big-slider__slide-foto-4-img
-            .big-slider__slide.big-slider__slide-5
+            .big-slider__slide.big-slider__slide-5.animated
               .big-slider__slide-circle
-              img(src="./images/features-slide5.png").big-slider__slide-foto-5
+              img(src="./images/features-slide5.png").big-slider__slide-foto.big-slider__slide-foto-5.animated
 
           .section3__slider-counter-wrapper
             .section3__min-slider
@@ -365,40 +365,40 @@ body
           | часто задаваемые вопросы
         .section8__ask-wrapper
           .section8__ask-wrapper-1
-            a(href="#").section8__ask.section8__ask-1(data-slide = '0')
+            a(href="#" data-slide = '0').section8__ask.section8__ask-1
               | 1. Сколько денег я получу за свой автомобиль (процент от стоимости авто)?
-            a(href="#").section8__ask.section8__ask-2(data-slide = '1')
+            a(href="#" data-slide = '1').section8__ask.section8__ask-2
               | 2. Если на руках дубликат ПТС (потерян ПТС, кончилось место в ПТС т.д.)?
-            a(href="#").section8__ask.section8__ask-3(data-slide = '2')
+            a(href="#" data-slide = '2').section8__ask.section8__ask-3
               | 3. Как быстро я смогу получить ПТС после оплаты займа?
-            a(href="#").section8__ask.section8__ask-4(data-slide = '3')
+            a(href="#" data-slide = '3').section8__ask.section8__ask-4
               | 4. Нужно ли приезжать в офис на автомобиле? Что, если автомобиль не на ходу?
-            a(href="#").section8__ask.section8__ask-5(data-slide = '4')
+            a(href="#" data-slide = '4').section8__ask.section8__ask-5
               | 5. Нужно ли оформлять на Молл-Авто ломбард генеральную доверенность?
-            a(href="#").section8__ask.section8__ask-6(data-slide = '5')
+            a(href="#" data-slide = '5').section8__ask.section8__ask-6
               | 6. Нужно ли выезжать еще куда-то для заключения договора?
-            a(href="#").section8__ask.section8__ask-7(data-slide = '6')
+            a(href="#" data-slide = '6').section8__ask.section8__ask-7
               | 7. Что будет при просрочке платежей?
-            a(href="#").section8__ask.section8__ask-8(data-slide = '7')
+            a(href="#" data-slide = '7').section8__ask.section8__ask-8
               | 8. При просрочке платежей смогут забрать мое авто?
-            a(href="#").section8__ask.section8__ask-9(data-slide = '8')
+            a(href="#" data-slide = '8').section8__ask.section8__ask-9
               | 9. Если долго не вносить платежи (месяц, два) или нет денег для того, чтобы вносить платежи регулярно, что будет?
           .section8__ask-wrapper-2
-            a(href="#").section8__ask.section8__ask-10(data-slide = '9')
+            a(href="#" data-slide = '9').section8__ask.section8__ask-10
               | 10. Какие документы могут быть необходимы для получения заёмных денег под ПТС?
-            a(href="#").section8__ask.section8__ask-11(data-slide = '10')
+            a(href="#" data-slide = '10').section8__ask.section8__ask-11
               | 11. Если я использую автомобиль по доверенности, могу ли я получить деньги, заложив ПТС?
-            a(href="#").section8__ask.section8__ask-12(data-slide = '11')
+            a(href="#" data-slide = '11').section8__ask.section8__ask-12
               | 12. Автомобиль взят в кредит, ПТС находится в банке. Можно ли в таком случае взять займ?
-            a(href="#").section8__ask.section8__ask-13(data-slide = '12')
+            a(href="#" data-slide = '12').section8__ask.section8__ask-13
               | 13. После оплаты суммы займа возникают ли скрытые проценты?
-            a(href="#").section8__ask.section8__ask-14(data-slide = '13')
+            a(href="#" data-slide = '13').section8__ask.section8__ask-14
               | 14. Ставится ли какая-либо отметка о залоге в ПТС?
-            a(href="#").section8__ask.section8__ask-15(data-slide = '14')
+            a(href="#" data-slide = '14').section8__ask.section8__ask-15
               | 15. Какие документы после заключения сделки останутся в Молл-Автоломбард?
-            a(href="#").section8__ask.section8__ask-16(data-slide = '15')
+            a(href="#" data-slide = '15').section8__ask.section8__ask-16
               | 16. У меня нет второго комплекта ключей?
-            a(href="#").section8__ask.section8__ask-17(data-slide = '16')
+            a(href="#" data-slide = '16').section8__ask.section8__ask-17
               | 17. Я могу получить займ если на автомобиль наложен арест или запрет на регистрационные действия?
         .section8__your-ask
           .section8__your-ask-text
@@ -567,7 +567,7 @@ body
                   | Обработку персональных данных
               .checkbox-wrapper__text-2
                 | Ваши данные не будут переданы третьим лицам
-          button(type="submit")(href="#").btn.popup__btn
+          button(type="submit" href="#").btn.popup__btn
             | Задать вопрос
   .popup__review.hidden
     .overlay
