--- a/app/stylesheets/sections/_section3.scss
+++ b/app/stylesheets/sections/_section3.scss
@@ -41,11 +41,16 @@
   height: 460px;
 }
 
+.big-slider__slide-foto {
+
+}
+
 .big-slider__slide img {
   position: absolute;
   z-index: 10;
   margin: 0 auto;
 
+  opacity: 1;
 }
 
 .big-slider__slide-foto {
