big slider fade-right

--- a/app/stylesheets/sections/_section3.scss
+++ b/app/stylesheets/sections/_section3.scss
@@ -28,6 +28,8 @@
 .section3__big-slider {
   position: relative;
 
+  overflow: hidden;
+
   display: inline-block;
 
   z-index: 10;
@@ -49,7 +51,6 @@
   position: absolute;
   z-index: 10;
   margin: 0 auto;
-
 }
 
 .big-slider__slide-foto {
