Fix: big slider

--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -165,27 +165,24 @@ body
         .section3__text
           | Почему Вам  выгодно взять займ у нас
         .section3__content
-          .section3__big-slider
-            .big-slider__slide.big-slider__slide-1.animated
-              .big-slider__slide-circle
-              img(src="./images/features-slide1.png").big-slider__slide-foto.big-slider__slide-foto-1.animated
+          .slider-inner
+            .big-slider__slide-circle
+            .section3__big-slider
+              .big-slider__slide.big-slider__slide-1.animated
+                img(src="./images/features-slide1.png").big-slider__slide-foto.big-slider__slide-foto-1.animated
 
-            .big-slider__slide.big-slider__slide-2.animated
-              .big-slider__slide-circle
-              img(src="./images/features-slide2.png").big-slider__slide-foto.big-slider__slide-foto-2.animated
+              .big-slider__slide.big-slider__slide-2.animated
+                img(src="./images/features-slide2.png").big-slider__slide-foto.big-slider__slide-foto-2.animated
 
-            .big-slider__slide.big-slider__slide-3.animated
-              .big-slider__slide-circle
-              img(src="./images/features-slide3.png").big-slider__slide-foto.big-slider__slide-foto-3.animated
+              .big-slider__slide.big-slider__slide-3.animated
+                img(src="./images/features-slide3.png").big-slider__slide-foto.big-slider__slide-foto-3.animated
 
-            .big-slider__slide.big-slider__slide-4.animated
-              .big-slider__slide-circle
-              img(src="./images/features-slide4.png").big-slider__slide-foto.big-slider__slide-foto-4.animated
+              .big-slider__slide.big-slider__slide-4.animated
+                img(src="./images/features-slide4.png").big-slider__slide-foto.big-slider__slide-foto-4.animated
+                .big-slider__slide-foto-4-img
 
-              .big-slider__slide-foto-4-img
-            .big-slider__slide.big-slider__slide-5.animated
-              .big-slider__slide-circle
-              img(src="./images/features-slide5.png").big-slider__slide-foto.big-slider__slide-foto-5.animated
+              .big-slider__slide.big-slider__slide-5.animated
+                img(src="./images/features-slide5.png").big-slider__slide-foto.big-slider__slide-foto-5.animated
 
           .section3__slider-counter-wrapper
             .section3__min-slider
